examples/test/testpolicy6662.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6662
  namespace: namespace434
spec:
  podSelector:
    matchLabels:
      key38: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value3
          key8: value21
      podSelector:
        matchLabels:
          key40: value19
          key14: value21
